Rename some file

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,19 @@ build/windows/x64/release/res/ico/netmusic_logoS.ico
 .vscode/compile_commands.json
 build/.deps/EasyMusic/windows/x64/release/tooltip/tooltip.cpp.obj.d
 build/.objs/EasyMusic/windows/x64/release/tooltip/tooltip.cpp.obj
+build/.deps/EasyMusic/windows/x64/release/all_class.cpp.obj.d
+build/.deps/EasyMusic/windows/x64/release/all_proc.cpp.obj.d
+build/.deps/EasyMusic/windows/x64/release/foot_tool.cpp.obj.d
+build/.deps/EasyMusic/windows/x64/release/gdi_device.cpp.obj.d
+build/.deps/EasyMusic/windows/x64/release/head_tool.cpp.obj.d
+build/.deps/EasyMusic/windows/x64/release/navigation_bar.cpp.obj.d
+build/.deps/EasyMusic/windows/x64/release/player.cpp.obj.d
+build/.deps/EasyMusic/windows/x64/release/playing_song.cpp.obj.d
+build/.objs/EasyMusic/windows/x64/release/all_class.cpp.obj
+build/.objs/EasyMusic/windows/x64/release/all_proc.cpp.obj
+build/.objs/EasyMusic/windows/x64/release/foot_tool.cpp.obj
+build/.objs/EasyMusic/windows/x64/release/gdi_device.cpp.obj
+build/.objs/EasyMusic/windows/x64/release/head_tool.cpp.obj
+build/.objs/EasyMusic/windows/x64/release/navigation_bar.cpp.obj
+build/.objs/EasyMusic/windows/x64/release/player.cpp.obj
+build/.objs/EasyMusic/windows/x64/release/playing_song.cpp.obj
