--- a/.gitignore
+++ b/.gitignore
@@ -1,106 +1,3 @@
-﻿/.vs
-/out/build/x64-Debug
-build/.deps/EasyMusic/windows/x64/release/allClass.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/allProc.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/EasyMusic.exe.d
-build/.deps/EasyMusic/windows/x64/release/foottool.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/gdiDevice.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/headtool.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/Lmenu.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/main.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/mytools.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/network.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/PlayingSong.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/tooltip.cpp.obj.d
-build/.objs/EasyMusic/windows/x64/release/allClass.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/allProc.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/foottool.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/gdiDevice.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/headtool.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/Lmenu.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/main.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/mytools.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/network.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/PlayingSong.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/tooltip.cpp.obj
-build/windows/x64/release/EasyMusic.exe
-.xmake/vscode-build.log
-.xmake/windows/x64/project.lock
-.xmake/windows/x64/xmake.conf
-.xmake/windows/x64/cache/config
-.xmake/windows/x64/cache/cxxmodules
-.xmake/windows/x64/cache/detect
-.xmake/windows/x64/cache/history
-.xmake/windows/x64/cache/option
-.xmake/windows/x64/cache/package
-.xmake/windows/x64/cache/project
-.xmake/windows/x64/cache/references
-.xmake/windows/x64/cache/repository
-.xmake/windows/x64/cache/toolchain
-build/CMakeCache.txt
-build/.cmake/api/v1/query/client-vscode/query.json
-build/CMakeFiles/cmake.check_cache
-build/CMakeFiles/CMakeConfigureLog.yaml
-build/CMakeFiles/3.27.6/CMakeCCompiler.cmake
-build/CMakeFiles/3.27.6/CMakeCXXCompiler.cmake
-build/CMakeFiles/3.27.6/CMakeDetermineCompilerABI_C.bin
-build/CMakeFiles/3.27.6/CMakeDetermineCompilerABI_CXX.bin
-build/CMakeFiles/3.27.6/CMakeRCCompiler.cmake
-build/CMakeFiles/3.27.6/CMakeSystem.cmake
-build/CMakeFiles/3.27.6/VCTargetsPath.txt
-build/CMakeFiles/3.27.6/VCTargetsPath.vcxproj
-build/CMakeFiles/3.27.6/CompilerIdC/CMakeCCompilerId.c
-build/CMakeFiles/3.27.6/CompilerIdC/CompilerIdC.exe
-build/CMakeFiles/3.27.6/CompilerIdC/CompilerIdC.vcxproj
-build/CMakeFiles/3.27.6/CompilerIdC/Debug/CMakeCCompilerId.obj
-build/CMakeFiles/3.27.6/CompilerIdC/Debug/CompilerIdC.exe.recipe
-build/CMakeFiles/3.27.6/CompilerIdC/Debug/CompilerIdC.tlog/CL.command.1.tlog
-build/CMakeFiles/3.27.6/CompilerIdC/Debug/CompilerIdC.tlog/CL.read.1.tlog
-build/CMakeFiles/3.27.6/CompilerIdC/Debug/CompilerIdC.tlog/CL.write.1.tlog
-build/CMakeFiles/3.27.6/CompilerIdC/Debug/CompilerIdC.tlog/CompilerIdC.lastbuildstate
-build/CMakeFiles/3.27.6/CompilerIdC/Debug/CompilerIdC.tlog/link.command.1.tlog
-build/CMakeFiles/3.27.6/CompilerIdC/Debug/CompilerIdC.tlog/link.read.1.tlog
-build/CMakeFiles/3.27.6/CompilerIdC/Debug/CompilerIdC.tlog/link.write.1.tlog
-build/CMakeFiles/3.27.6/CompilerIdCXX/CMakeCXXCompilerId.cpp
-build/CMakeFiles/3.27.6/CompilerIdCXX/CompilerIdCXX.exe
-build/CMakeFiles/3.27.6/CompilerIdCXX/CompilerIdCXX.vcxproj
-build/CMakeFiles/3.27.6/CompilerIdCXX/Debug/CMakeCXXCompilerId.obj
-build/CMakeFiles/3.27.6/CompilerIdCXX/Debug/CompilerIdCXX.exe.recipe
-build/CMakeFiles/3.27.6/CompilerIdCXX/Debug/CompilerIdCXX.tlog/CL.command.1.tlog
-build/CMakeFiles/3.27.6/CompilerIdCXX/Debug/CompilerIdCXX.tlog/CL.read.1.tlog
-build/CMakeFiles/3.27.6/CompilerIdCXX/Debug/CompilerIdCXX.tlog/CL.write.1.tlog
-build/CMakeFiles/3.27.6/CompilerIdCXX/Debug/CompilerIdCXX.tlog/CompilerIdCXX.lastbuildstate
-build/CMakeFiles/3.27.6/CompilerIdCXX/Debug/CompilerIdCXX.tlog/link.command.1.tlog
-build/CMakeFiles/3.27.6/CompilerIdCXX/Debug/CompilerIdCXX.tlog/link.read.1.tlog
-build/CMakeFiles/3.27.6/CompilerIdCXX/Debug/CompilerIdCXX.tlog/link.write.1.tlog
-build/CMakeFiles/3.27.6/Debug/VCTargetsPath.recipe
-build/CMakeFiles/3.27.6/Debug/VCTargetsPath.tlog/VCTargetsPath.lastbuildstate
-.vscode/c_cpp_properties.json
-.vscode/settings.json
-build/windows/x64/release/res/emf/clock.emf
-build/windows/x64/release/res/emf/cloud.emf
-build/windows/x64/release/res/emf/collect.emf
-build/windows/x64/release/res/emf/download.emf
-build/windows/x64/release/res/emf/heart_grey.emf
-build/windows/x64/release/res/emf/heart.emf
-build/windows/x64/release/res/emf/music.emf
-build/windows/x64/release/res/ico/netmusic_logoS.ico
-.vscode/compile_commands.json
-build/.deps/EasyMusic/windows/x64/release/tooltip/tooltip.cpp.obj.d
-build/.objs/EasyMusic/windows/x64/release/tooltip/tooltip.cpp.obj
-build/.deps/EasyMusic/windows/x64/release/all_class.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/all_proc.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/foot_tool.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/gdi_device.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/head_tool.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/navigation_bar.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/player.cpp.obj.d
-build/.deps/EasyMusic/windows/x64/release/playing_song.cpp.obj.d
-build/.objs/EasyMusic/windows/x64/release/all_class.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/all_proc.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/foot_tool.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/gdi_device.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/head_tool.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/navigation_bar.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/player.cpp.obj
-build/.objs/EasyMusic/windows/x64/release/playing_song.cpp.obj
+﻿.vs
+out
+build
