--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 ﻿.vs
 out
 build
+.vscode/c_cpp_properties.json
+.vscode/compile_commands.json
+.vscode/settings.json
+.xmake/vscode-build.log
+.xmake/windows/x64/project.lock
+.xmake/windows/x64/xmake.conf
+.xmake/windows/x64/cache/config
+.xmake/windows/x64/cache/cxxmodules
+.xmake/windows/x64/cache/detect
+.xmake/windows/x64/cache/history
+.xmake/windows/x64/cache/option
+.xmake/windows/x64/cache/package
+.xmake/windows/x64/cache/project
+.xmake/windows/x64/cache/references
+.xmake/windows/x64/cache/repository
+.xmake/windows/x64/cache/toolchain
